fix: Increase margin-top for tech section for improved spacing

--- a/my-portfolio/src/app/pages/Home/Home.css
+++ b/my-portfolio/src/app/pages/Home/Home.css
@@ -441,7 +441,7 @@
       }
 
       .tech-section {        
-        margin-top: 4.5rem;
+        margin-top: 7rem;
 
         > h2 {
         font-size: 3rem;        
